# axiomate

./: .gitignore  .npmrc  CHANGELOG.md  DELETED_FEATURES.md  FEATURE_AUDIT.md  README.md  REMAINING_CLEANUP_AUDIT.md  computer_use_mac_gap_audit.md  harness-engineering-report.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_rag_roadmap.md
agent/: build.ts  buildConfig.ts  buildEnv.ts  bunPluginComputerUseStub.ts  bunPluginNativeExeDir.ts  generateWinIcon.ts  package-linux.ts  package-mac.ts  package-win.ts  package.json  packageNatives.ts  test-ink.tsx  tsconfig.json  vitest.all.config.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts  vitest.plugins.ts
agent-browser-axiomate/: index.js  package.json
audio-capture-axiomate/: Cargo.toml  index.d.ts  index.js  package.json
browser-bridge-axiomate/: package.json
clipboard-axiomate/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
clipboard-axiomate/__test__/: index.test.ts
clipboard-axiomate/src/: lib.rs
clipboard-axiomate/src/ts/: fallback.ts
color-diff-axiomate/: package.json
common-axiomate/: package.json  tsconfig.json
computer-use-mac-napi-axiomate/: Cargo.toml  build.rs  index.d.ts  index.js
computer-use-mcp-axiomate/: COORDINATES.md  package.json  tsconfig.json
computer-use-native-axiomate/: package.json  vitest.config.ts  vitest.headless.config.ts
computer-use-win-napi-axiomate/: Cargo.toml  index.js  package.json
docs/: api-harness-dogfood-risk-note.md  api-reliability-engineering-plan.md  axiomate-hermes-file-harness-plan.md  (+19 more)
(+1498 files in other folders)
