[package]
name = "clipboard-axiomate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi6"] }
napi-derive = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSData"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
